# beankeeper

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
beankeeper/: Cargo.toml
beankeeper-cli/: Cargo.toml
beankeeper-cli/src/: cli.rs  error.rs  lib.rs  main.rs  passphrase.rs
beankeeper-cli/src/commands/: account.rs  budget.rs  company.rs  export.rs  import_ofx.rs  init.rs  mod.rs  report.rs  txn.rs  verify.rs
beankeeper-cli/src/db/: accounts.rs  attachments.rs  budgets.rs  companies.rs  connection.rs  mod.rs  schema.rs  transactions.rs
beankeeper-cli/src/output/: csv.rs  json.rs  mod.rs  table.rs
beankeeper/src/: error.rs  lib.rs
beankeeper/src/core/: journal_entry.rs  ledger.rs  transaction.rs
beankeeper/src/reporting/: mod.rs
beankeeper/src/types/: account.rs  account_code.rs  account_type.rs  amount.rs  clearance.rs  currency.rs  debit_credit.rs  document.rs  entry.rs  idempotency.rs  mod.rs  money.rs
beankeeper/tests/: accounting_scenarios.rs
docs/beankeeper/: SKILL.md
docs/beankeeper/references/: accounting.md  commands.md  json-api.md  workflows.md
docs/superpowers/specs/: 2026-03-18-json-envelope-design.md  2026-03-18-json-envelope-implementation-plan.md  2026-03-19-ofx-import-design.md
src/: error.rs  lib.rs
src/core/: journal_entry.rs  ledger.rs  mod.rs  transaction.rs
src/reporting/: account_balance.rs  trial_balance.rs
src/types/: account.rs  account_code.rs  currency.rs  debit_credit.rs  entry.rs  money.rs
