[package]
name = "beankeeper"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Idiomatic, ergonomic library of primitives for professional double-entry accounting"
authors = ["Roland <roland@govcraft.ai>"]
license = "MIT OR Apache-2.0"
keywords = ["accounting", "double-entry", "bookkeeping", "finance", "ledger"]
repository = "https://github.com/Govcraft/beankeeper"
categories = ["finance"]

[dependencies]
chrono = { version = "0.4.44", default-features = false }
data-encoding = { version = "2.10.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.9", default-features = false }

[lints]
workspace = true
